# fork-anton

./: .gitignore  LICENSE  README.md  datasources.md  install.ps1  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: cla.yml  release.yml  tests_e2e_release.yml
anton/: README.md  analytics.py  chat.py  chat_session.py  chat_ui.py  checks.py  cli.py  connect_collector.py  data_vault.py  datasource_registry.py  minds_client.py  minds_http.py  minds_query.py  publisher.py  scratchpad.py  scratchpad_boot.py  tools.py  updater.py  workspace.py
anton/commands/: datasource.py  session.py  setup.py  ui.py
anton/commands/datasource/: __init__.py  connect.py  custom.py  helpers.py  manage.py  verify.py
anton/config/: datasources.md  settings.py
anton/core/: session.py
anton/core/backends/: base.py  scratchpad_boot.py  wire.py
anton/core/datasources/: data_vault.py  datasource_registry.py  datasources.md
anton/llm/: anthropic.py  client.py  openai.py  prompts.py
anton/memory/: consolidator.py  cortex.py  episodes.py  manage.py
anton/utils/: datasources.py  prompt.py
tests/: conftest.py  test_channel_branding.py  test_channel_theme.py  test_chat.py  test_chat_context.py  test_chat_scratchpad.py  test_chat_ui.py  test_checks.py  test_client.py  test_connect_collector.py  test_cortex.py  test_datasource.py  test_hippocampus.py  test_openai_provider.py  test_openai_setup.py  test_prompt_builder_skills.py  test_provider.py  test_publish_api_key.py  test_scratchpad.py  test_session_skills_init.py  test_skills_e2e.py  test_tools.py
tests/e2e/: conftest.py
(+16 files in other folders)
